--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head><meta charset="UTF-8"><title>Ana Sayfa</title></head>
+<body>
+  <h1>Rent a Car Ana Sayfa</h1>
+  <a href="search-results.html">Araçları Görüntüle</a>
+</body>
+</html>
 
