--- a/pages/search-results.html
+++ b/pages/search-results.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Araçlar</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <h1>Araçlar</h1>
+  <div id="vehicle-list"></div>
+
+  <script src="js/app.js" defer></script>
+</body>
+</html>
 
