--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head><meta charset="UTF-8"><title>Ana Sayfa</title></head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rent A Car</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 <body>
-  <h1>Rent a Car Ana Sayfa</h1>
-  <a href="search-results.html">Araçları Görüntüle</a>
+  <div id="header"></div>
+
+  <main id="app">
+    <!-- Buraya sayfa içerikleri yüklenecek -->
+    <h1>Rent A Car Ana Sayfa</h1>
+    <p>Hoşgeldiniz! Araç aramak için devam edin.</p>
+    <button id="go-search">Araçları Gör</button>
+  </main>
+
+  <div id="footer"></div>
+
+  <script src="js/app.js" defer></script>
 </body>
 </html>
-
