--- a/pages/search-results.html
+++ b/pages/search-results.html
@@ -1,68 +1,4 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <title>Araç Listesi</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    .car-card {
-      border: 1px solid #ddd; padding: 10px; margin-bottom: 10px;
-      cursor: pointer; border-radius: 5px;
-      transition: background-color 0.2s ease;
-    }
-    .car-card:hover { background-color: #f0f0f0; }
-    .car-card.selected { background-color: #cce5ff; border-color: #339af0; }
-    button {
-      margin-top: 20px; padding: 10px 20px; font-size: 16px;
-    }
-    button:disabled { background-color: #ccc; cursor: not-allowed; }
-  </style>
-</head>
-<body>
-  <h1>Araç Listesi</h1>
-
-  <div id="cars-container"></div>
-
-  <button id="continue-btn" disabled>Devam Et</button>
-
-  <script>
-    const cars = [
-      { id: 1, brand: "Toyota", model: "Corolla", price: 250 },
-      { id: 2, brand: "Honda", model: "Civic", price: 280 },
-      { id: 3, brand: "Ford", model: "Focus", price: 230 },
-    ];
-
-    const carsContainer = document.getElementById("cars-container");
-    const continueBtn = document.getElementById("continue-btn");
-    let selectedCarId = null;
-
-    function renderCars() {
-      carsContainer.innerHTML = "";
-      cars.forEach(car => {
-        const div = document.createElement("div");
-        div.className = "car-card";
-        div.textContent = `${car.brand} ${car.model} - Günlük: ${car.price}₺`;
-        div.dataset.id = car.id;
-        if (car.id === selectedCarId) {
-          div.classList.add("selected");
-        }
-        div.addEventListener("click", () => {
-          selectedCarId = car.id;
-          localStorage.setItem("selectedCar", JSON.stringify(car));
-          renderCars();
-          continueBtn.disabled = false;
-        });
-        carsContainer.appendChild(div);
-      });
-    }
-
-    continueBtn.addEventListener("click", () => {
-      // Şimdilik alert yapalım veya sayfa geçişi placeholder'ı
-      alert("Seçilen araç kaydedildi. Sonraki sayfaya yönlendirme burada olacak.");
-      // Örnek: window.location.href = "details.html";
-    });
-
-    renderCars();
-  </script>
-</body>
-</html>
+<h2>Araç Listesi</h2>
+<div id="car-list">
+  <!-- Araçlar buraya JS ile yüklenecek -->
+</div>
