--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Rent A Car</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rent a Car</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div id="header"></div>
 
   <main id="app">
-    <!-- Buraya sayfa içerikleri yüklenecek -->
-    <h1>Rent A Car Ana Sayfa</h1>
-    <p>Hoşgeldiniz! Araç aramak için devam edin.</p>
-    <button id="go-search">Araçları Gör</button>
+    <!-- Sayfalar buraya yüklenir -->
   </main>
 
   <div id="footer"></div>
