--- a/pages/search-results.html
+++ b/pages/search-results.html
@@ -1,4 +1,2 @@
-<h2>Araç Listesi</h2>
-<div id="car-list">
-  <!-- Araçlar buraya JS ile yüklenecek -->
-</div>
+<h2>Mevcut Araçlar</h2>
+<div id="vehicle-list">Yükleniyor...</div>
