--- a/pages/booking.html
+++ b/pages/booking.html
@@ -1,1 +1,8 @@
+<h2>Rezervasyon</h2>
+<form id="booking-form">
+  <input type="text" placeholder="Adınız" required />
+  <input type="text" placeholder="Soyadınız" required />
+  <input type="date" required />
+  <button type="submit">Gönder</button>
+</form>
 
